--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,22 +8,12 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
 <body class="d-flex text-center text-white bg-dark">
+
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
-            <div>
-                <h3 class="float-md-start mb-0">BrewReview</h3>
-                <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/breweries">Breweries</a>
-                    <% if(!currentUser) { %>
-                    <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
-                    <% } else { %>
-                    <a class="nav-link" href="/logout">Logout</a>
-                    <% } %>
-                </nav>
-            </div>
+            <%- include('./partials/navbar-home') %> 
         </header>
+         
         <main class="px-3">
             <h1>BrewReview</h1>
             <p class="lead"> Welcome to BrewReview! <br> Explore the many amazing breweries in the South. <br>
@@ -35,10 +25,7 @@
         <footer class="mt-auto text-white-50">
             <p>BrewReview &copy; 2021 </p>
         </footer>
-
-
-    </div>
-
+    </div>   
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
