--- a/views/partials/navbar-home.ejs
+++ b/views/partials/navbar-home.ejs
@@ -1,5 +1,4 @@
-
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark">
     <div class="container-md">
       <a class="navbar-brand" href="#"><h3>BrewReview</h3></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,9 +15,7 @@
           <% } else {%> 
             <a class="nav-link" href="/logout">Logout</a>
           <% } %> 
-        </div>
-      
+        </div>      
       </div>
     </div>
 </nav>
-
