--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -28,6 +28,7 @@
                             <button class="btn btn-success btn-block">Login</button>
                         </div>
                     </form>
+                    <h5 class="mt-3">Don't have an account?  <a href="/register">Sign Up</a></h5>
                 </div>
             </div>
         </div>
