--- a/views/partials/navbar-home.ejs
+++ b/views/partials/navbar-home.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
     <div class="container-md">
-      <a class="navbar-brand" href="#"><h3>BrewReview</h3></a>
+      <a class="navbar-brand" href="/"><h3>BrewReview</h3></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
